# astro_coords

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: check_licenses.yml  tests.yml
src/: angle_helper.rs  cartesian.rs  declination.rs  direction.rs  earth_equatorial.rs  ecliptic.rs  equatorial.rs  error.rs  lib.rs  physical_cartesian.rs  physical_coordinates.rs  physical_coords.rs  ra_and_dec.rs  reference_frame.rs  right_ascension.rs  spherical.rs
src/reference_frame/: celestial_body.rs  mod.rs  mod_impl.rs
src/traits/: active_rotation.rs  mathematical.rs  mod.rs  passive_rotation.rs  physical.rs
src/transformations/: mod.rs  relative_direction.rs  rotations.rs
src/units/: length.rs  mod.rs
tests/: angle_to.rs  angle_to_performance.rs  conversions.rs  reference_frame.rs  reference_frame_performance.rs  rotation_performance.rs  rotations.rs  transformations.rs  utils.rs
