[package]
authors = ["The Comamba <thecomamba@jojoheinze.de>"]
categories = ["mathematics", "science"]
description = "A Rust crate containing typed coordinate systems found in the context of astronomy."
edition = "2021"
keywords = ["coordinates", "astronomy"]
license = "MIT"
name = "astro_coords"
readme = "README.md"
repository = "https://github.com/TheComamba/AstroCoords"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] } # (De)Serialization
uom = { version = "0.36.0", default-features = false, features = ["f64", "si", "std"] } # Physical quantities

[dev-dependencies]
rand = "0.9.0"
serde_json = "1.0"
serial_test = "3.0.0"